--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jackson's Jeopardy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cleanslate/0.10.1/cleanslate.min.css" >
 
-
+    <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,9 +20,11 @@
             <div class="category" id="category1">
                 <h3>Category</h3>
             </div>
-            <div class="answer col1" id="100">
-                <h3>100</h3>
-            </div>
+            <a href="#test-popup" class="open-popup-link">
+                <div class="answer col1" id="100">
+                    <h3>100</h3>
+                </div>
+            </a>
             <div class="answer col1" id="200">
                 <h3>200</h3>
             </div>
@@ -118,7 +120,19 @@
         </div>
     </div>
 
+    <!-- These are the popups -->
+    <div id="test-popup" class="white-popup mfp-hide">
+            <h1>This is where the question would be.</h1>
+            <br/>
+            <br/>
+            <button class="test">Test</button><br/>
+            <button class="test">Test</button><br/>
+            <button class="test">Test</button><br/>
+            <button class="test">Test</button><br/>
+          </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/magnific.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
