--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1 class="player">Player</h1>
         <h1 class="score">$ 0</h1>
     </header>
     <div class="game-container">
         <div class="category-container" >
             <div class="category" id="category1">
-                <h3>Category</h3>
+                <h3>Colors that end in -urple</h3>
             </div>
-            <a href="#test-popup" class="open-popup-link">
+            <a href="#cat1-100" class="open-popup-link">
                 <div class="answer col1" id="100">
                     <h3>100</h3>
                 </div>
@@ -121,15 +121,17 @@
     </div>
 
     <!-- These are the popups -->
-    <div id="test-popup" class="white-popup mfp-hide">
-            <h1>This is where the question would be.</h1>
-            <br/>
-            <br/>
-            <button class="test">Test</button><br/>
-            <button class="test">Test</button><br/>
-            <button class="test">Test</button><br/>
-            <button class="test">Test</button><br/>
-          </div>
+    <div id="cat1-100" class="popup mfp-hide">
+        <h1>This is the color of the rain in the famed Prince album.</h1>
+        <br/>
+        <br/>
+        <a href="#wrong"><button class="wrong open-wrong-popup">What is gurple?</button></a><br/>
+        <button class="wrong">What is whurple?</button><br/>
+        <button class="right">What is purple?</button><br/>
+        <button class="wrong">What is acid?</button><br/>
+    </div>
+    <!-- <div id="wrong" class="popup mfp-hide">I am sorry. That is incorrect.</div>
+    <div id="right" class="popup mfp-hide">Correct!!!</div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/magnific.js"></script>
