--- a/index.html
+++ b/index.html
@@ -12,112 +12,119 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="player">Player</h1>
-        <h1 class="score">$ 0</h1>
+        <h1 class="header-text">Jackson's Jeopardy</h1>
     </header>
-    <div class="game-container">
-        <div class="category-container" >
-            <div class="category" id="category1">
-                <h3>Colors that end in -urple</h3>
-            </div>
-            <div class="answer col1" id="100">
-                    <h3>100</h3>
-            </div>
-            <div class="answer col1" id="200">
-                <h3>200</h3>
-            </div>
-            <div class="answer col1" id="300">
-                <h3>300</h2>
-            </div>
-            <div class="answer col1" id="400">
-                <h3>400</h3>
-            </div>
-            <div class="answer col1" id="500">
-                <h3>500</h3>
-            </div>
-        </div>
-        <div class="category-container" >
-            <div class="category" id="category2">
-                <h3>Category</h3>
-            </div>
-            <div class="answer" id="100">
-                <h3>100</h3>
-            </div>
-            <div class="answer" id="200">
-                <h3>200</h3>
-            </div>
-            <div class="answer" id="300">
-                <h3>300</h2>
-            </div>
-            <div class="answer" id="400">
-                <h3>400</h3>
-            </div>
-            <div class="answer" id="500">
-                <h3>500</h3>
-            </div>
-        </div>
-        <div class="category-container" >
-            <div class="category" id="category3">
-                <h3>Category</h3>
-            </div>
-            <div class="answer" id="100">
-                <h3>100</h3>
-            </div>
-            <div class="answer" id="200">
-                <h3>200</h3>
-            </div>
-            <div class="answer" id="300">
-                <h3>300</h2>
-            </div>
-            <div class="answer" id="400">
-                <h3>400</h3>
-            </div>
-            <div class="answer" id="500">
-                <h3>500</h3>
-            </div>
-        </div>
-        <div class="category-container" >
-            <div class="category" id="category4">
-                <h3>Category</h3>
-            </div>
-            <div class="answer" id="100">
-                <h3>100</h3>
-            </div>
-            <div class="answer" id="200">
-                <h3>200</h3>
-            </div>
-            <div class="answer" id="300">
-                <h3>300</h2>
-            </div>
-            <div class="answer" id="400">
-                <h3>400</h3>
-            </div>
-            <div class="answer" id="500">
-                <h3>500</h3>
-            </div>
-        </div>
-        <div class="category-container" >
-            <div class="category" id="category5">
-                <h3>Category</h3>
-            </div>
-            <div class="answer" id="100">
-                <h3>100</h3>
-            </div>
-            <div class="answer" id="200">
-                <h3>200</h3>
-            </div>
-            <div class="answer" id="300">
-                <h3>300</h2>
-            </div>
-            <div class="answer" id="400">
-                <h3>400</h3>
-            </div>
-            <div class="answer" id="500">
-                <h3>500</h3>
-            </div>
-        </div>
-    </div>
+    <main class="main-container">
+        <div class="side-container">
 
+        </div>
+        <div class="game-container">
+            <div class="category-container" >
+                <div class="category" id="category1">
+                    <h3>Colors that end in -urple</h3>
+                </div>
+                <div class="answer col1" id="100">
+                        <h3>100</h3>
+                </div>
+                <div class="answer col1" id="200">
+                    <h3>200</h3>
+                </div>
+                <div class="answer col1" id="300">
+                    <h3>300</h2>
+                </div>
+                <div class="answer col1" id="400">
+                    <h3>400</h3>
+                </div>
+                <div class="answer col1" id="500">
+                    <h3>500</h3>
+                </div>
+            </div>
+            <div class="category-container" >
+                <div class="category" id="category2">
+                    <h3>90s Hip-Hop</h3>
+                </div>
+                <div class="answer" id="100">
+                    <h3>100</h3>
+                </div>
+                <div class="answer" id="200">
+                    <h3>200</h3>
+                </div>
+                <div class="answer" id="300">
+                    <h3>300</h2>
+                </div>
+                <div class="answer" id="400">
+                    <h3>400</h3>
+                </div>
+                <div class="answer" id="500">
+                    <h3>500</h3>
+                </div>
+            </div>
+            <div class="category-container" >
+                <div class="category" id="category3">
+                    <h3>Category</h3>
+                </div>
+                <div class="answer" id="100">
+                    <h3>100</h3>
+                </div>
+                <div class="answer" id="200">
+                    <h3>200</h3>
+                </div>
+                <div class="answer" id="300">
+                    <h3>300</h2>
+                </div>
+                <div class="answer" id="400">
+                    <h3>400</h3>
+                </div>
+                <div class="answer" id="500">
+                    <h3>500</h3>
+                </div>
+            </div>
+            <div class="category-container" >
+                <div class="category" id="category4">
+                    <h3>Category</h3>
+                </div>
+                <div class="answer" id="100">
+                    <h3>100</h3>
+                </div>
+                <div class="answer" id="200">
+                    <h3>200</h3>
+                </div>
+                <div class="answer" id="300">
+                    <h3>300</h2>
+                </div>
+                <div class="answer" id="400">
+                    <h3>400</h3>
+                </div>
+                <div class="answer" id="500">
+                    <h3>500</h3>
+                </div>
+            </div>
+            <div class="category-container" >
+                <div class="category" id="category5">
+                    <h3>Category</h3>
+                </div>
+                <div class="answer" id="100">
+                    <h3>100</h3>
+                </div>
+                <div class="answer" id="200">
+                    <h3>200</h3>
+                </div>
+                <div class="answer" id="300">
+                    <h3>300</h2>
+                </div>
+                <div class="answer" id="400">
+                    <h3>400</h3>
+                </div>
+                <div class="answer" id="500">
+                    <h3>500</h3>
+                </div>
+            </div>
+        </div>
+        <div class="side-container">
+            <p class="score-title">Score</p>
+            <p class="score">$ 0</p>
+        </div>
+    </main>
     <!-- These are the popups -->
 
 
