Cleaned up the styling; added more data for the questions and answers.

--- a/index.html
+++ b/index.html
@@ -45,100 +45,100 @@
                 <div class="category" id="category1">
                     <h3>Colors that end in -urple</h3>
                 </div>
-                <div class="answer col1" id="100">
+                <div class="answer">
                     <button class="tile" data-toggle="modal" data-target="#myModal" data-num="0">100</button>
                 </div>
-                <div class="answer col1" id="200">
+                <div class="answer">
                     <button class="tile" data-toggle="modal" data-target="#myModal" data-num="1">200</button>
                 </div>
-                <div class="answer col1" id="300">
-                    <h3>300</h2>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="2">300</button>
                 </div>
-                <div class="answer col1" id="400">
-                    <h3>400</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="3">400</button>
                 </div>
-                <div class="answer col1" id="500">
-                    <h3>500</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="4">500</button>
                 </div>
             </div>
             <div class="category-container" >
                 <div class="category" id="category2">
-                    <h3>90s Hip-Hop</h3>
+                    <h3>90s<br/>Hip-Hop</h3>
                 </div>
-                <div class="answer" id="100">
-                    <h3>100</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="5">100</button>
                 </div>
-                <div class="answer" id="200">
-                    <h3>200</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="6">200</button>
                 </div>
-                <div class="answer" id="300">
-                    <h3>300</h2>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="7">300</button>
                 </div>
-                <div class="answer" id="400">
-                    <h3>400</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="8">400</button>
                 </div>
-                <div class="answer" id="500">
-                    <h3>500</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="9">500</button>
                 </div>
             </div>
             <div class="category-container" >
                 <div class="category" id="category3">
-                    <h3>Category</h3>
+                    <h3>Forgotten TV Shows</h3>
                 </div>
-                <div class="answer" id="100">
-                    <h3>100</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="10">100</button>
                 </div>
-                <div class="answer" id="200">
-                    <h3>200</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="11">200</button>
                 </div>
-                <div class="answer" id="300">
-                    <h3>300</h2>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="12">300</button>
                 </div>
-                <div class="answer" id="400">
-                    <h3>400</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="13">400</button>
                 </div>
-                <div class="answer" id="500">
-                    <h3>500</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="14">500</button>
                 </div>
             </div>
             <div class="category-container" >
                 <div class="category" id="category4">
-                    <h3>Category</h3>
+                    <h3>Not<br/>Food</h3>
                 </div>
-                <div class="answer" id="100">
-                    <h3>100</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="15">100</button>
                 </div>
-                <div class="answer" id="200">
-                    <h3>200</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="16">200</button>
                 </div>
-                <div class="answer" id="300">
-                    <h3>300</h2>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="17">300</button>
                 </div>
-                <div class="answer" id="400">
-                    <h3>400</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="18">400</button>
                 </div>
-                <div class="answer" id="500">
-                    <h3>500</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="19">500</button>
                 </div>
             </div>
             <div class="category-container" >
                 <div class="category" id="category5">
-                    <h3>Category</h3>
+                    <h3>POTUS in<br/>1800s</h3>
                 </div>
-                <div class="answer" id="100">
-                    <h3>100</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="20">100</button>
                 </div>
-                <div class="answer" id="200">
-                    <h3>200</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="21">200</button>
                 </div>
-                <div class="answer" id="300">
-                    <h3>300</h2>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="22">300</button>
                 </div>
-                <div class="answer" id="400">
-                    <h3>400</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="23">400</button>
                 </div>
-                <div class="answer" id="500">
-                    <h3>500</h3>
+                <div class="answer">
+                    <button class="tile" data-toggle="modal" data-target="#myModal" data-num="24">500</button>
                 </div>
             </div>
         </div>
