Finished the responsive styling and the welcome screen function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">    
     
     <link rel="stylesheet" media="all" href="css/style.css">
+    <link rel="stylesheet" media="(max-width: 1275px)" href="css/cssmid.css" />
     <link rel="stylesheet" media="(max-width: 1024px)" href="css/cssmid.css" />
     <link rel="stylesheet" media="(max-width: 750px)" href="css/csssm.css" />
     <link rel="stylesheet" media="(max-width: 450px)" href="css/cssxsm.css" />
@@ -38,6 +39,11 @@
                 </div>
             </div>
         </div>    
+    </div>
+    <div class="intro-container">
+        <h1>Welcome</h1>
+        <p>Thanks for visiting my game. Click new game to continue.</p>
+        <button class="new-game" id="new-game">New Game</button>
     </div>        
     <main class="main-container">
         <div class="side-container">
