--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>    
     </div>
     <div class="intro-container">
-        <h1>Welcome</h1>
-        <p>Thanks for visiting my game. Click new game to continue.</p>
+        <h1>Hello.</h1>
+        <p>Would you like to play a game? Click new game to continue.</p>
         <button class="new-game" id="new-game">New Game</button>
-    </div>        
+    </div>       
     <main class="main-container">
-        <div class="side-container">
+        <div class="side-container"> 
             <p class="score-title">Score</p>
             <p class="score">$ 0</p>
         </div>
@@ -161,7 +161,8 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="js/notify.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
